# aoc

./: README.md  pyproject.toml
src/aoc/: __main__.py  getters.py  initialisers.py  openers.py  runners.py  submitters.py  utils.py  validations.py
src/aoc/plugins/javascript/: getter.py  initialiser.py  local_validations.py  runner.py  submitter.py
src/aoc/plugins/python/: __init__.py  initialiser.py  local_validations.py  opener.py  runner.py  submitter.py
