[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "0.0.1"
authors = [
  { name="Emil Kloeden", email="emilkloeden@gmail.com" },
]
description = "Advent of Code scaffolding CLI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/emilkloeden/aoc"
"Bug Tracker" = "https://github.com/emilkloeden/aoc/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}